hphp/hack/test/typecheck/new_inference/unresolved_errors.php.exp
ERROR: File "unresolved_errors.php", line 16, characters 3-7:
Was expecting an object but type is unknown (Typing[4297])
  File "unresolved_errors.php", line 16, characters 3-7:
  It is unknown
  File "unresolved_errors.php", line 15, characters 8-13:
    from this definition because type parameter `Tv` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
ERROR: File "unresolved_errors.php", line 19, characters 3-7:
Was expecting an object but type is unknown (Typing[4297])
  File "unresolved_errors.php", line 19, characters 3-7:
  It is unknown
  File "unresolved_errors.php", line 18, characters 8-16:
    from this definition because type parameter `T` of `HH\Vector` could not be determined. Please add explicit type parameters to the invocation of `HH\Vector`
ERROR: File "unresolved_errors.php", line 22, characters 3-7:
Was expecting an object but type is unknown (Typing[4297])
  File "unresolved_errors.php", line 22, characters 3-7:
  It is unknown
  File "unresolved_errors.php", line 21, characters 8-23:
    from this definition because type parameter `T` of `generic_function` could not be determined. Please add explicit type parameters to the invocation of `generic_function`
  File "unresolved_errors.php", line 4, characters 40-40:
    via this generic `T`
ERROR: File "unresolved_errors.php", line 28, characters 3-11:
Was expecting an object but type is unknown (Typing[4297])
  File "unresolved_errors.php", line 27, characters 12-14:
  It is unknown because type parameter `Ti` of `Inv` could not be determined. Please add explicit type parameters to the invocation of `Inv`
  File "unresolved_errors.php", line 11, characters 25-26:
    via this generic `Ti`
